fixed transparent navbar collapse & mobile aspect ratio

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -433,7 +433,14 @@ a {
 /* responsive */
 @media (max-width: 1024px){
   .home-cards-container{ grid-template-columns: repeat(2, minmax(0, 1fr)); }
+
+  .navbar-collapse {
+    background: linear-gradient(90deg, #546ccc, #6c8cdc, #849ce4);
+    padding: 1rem;
+    border-radius: 0 0 10px 10px;
+  }
 }
+
 @media (max-width: 640px){
   .home-cards-container{ grid-template-columns: 1fr; }
 }
